samples/_failures_safe/1761516330_e69176_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf2b82f3.c: In function ‘main’:
./samples/SAFE/__tmp_cf2b82f3.c:166:16: error: expected ‘;’ at end of input
  166 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_cf2b82f3.c:166:9: error: expected declaration or statement at end of input
  166 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_cf2b82f3.c:166:9: error: expected declaration or statement at end of input
